# SMART

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SensorCapture  SensorCapture.pro  app.rc  appveyor.yml  bluetooth_copy.qml  device.h  device.qml  deviceconnect.cpp  deviceconnect.h  devicehandler.cpp  devicemanager.h  deviceselect.cpp  deviceselect.h  deviceservice.cpp  deviceservice.h  devicewizard.cpp  devicewizard.h  icons.qrc  license_template  main.cpp  main.qml  mainwindow.cpp  metawearwrapper.cpp  metawearwrapper.h  qml.qrc  xyseriesstream.cpp
common/: BaseDiscoveryAgent.cpp  BaseDiscoveryAgent.h  BluetoothAddress.cpp  BluetoothAddress.h  BluetoothAdress.cpp  BluetoothAdress.h  databundle.cpp  databundle.h  datacapture.cpp  datacapture.h  datasink.cpp  datasink.h  devicehandler.h  main.cpp  metawearhandler.cpp  metawearhandler.h  metawearwrapper.cpp  metawearwrapper.h  metawearwrapperbase.cpp  metawearwrapperbase.h  quazip.cmake  util.cpp  util.h  xyseriesstream.h
common/devices/: graillabpackets.h
forms/: MbientDeviceDiscoveryDialog.cpp  MbientDeviceDiscoveryDialog.h  MbientDeviceDiscoveryDialog.ui  MbientDeviceDiscoveryWidget.cpp  MbientDeviceDiscoveryWidget.h  devicediscovery.cpp  devicediscovery.h  devicediscovery.ui  devicediscoverywizardpage.cpp  devicediscoverywizardpage.h  devicediscoverywizardpage.ui  deviceloadingdialog.cpp  deviceloadingdialog.h  devicepanel.ui  deviceselectdialog.cpp  deviceselectdialog.h  deviceselectdialog.ui  deviceselectwizardpage.cpp  deviceselectwizardpage.h  deviceselectwizardpage.ui  devicewizard.cpp  devicewizard.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mbientconfigpanel.cpp  mbientconfigpanel.h  mbientconfigpanel.ui  mbientdevicediscoverywidget.ui  metawearconfig.cpp  metawearconfig.h  metawearconfig.ui  profiledialog.cpp  profiledialog.h  profiledialog.ui  sensorpanel.cpp  sensorpanel.h  sensorpanel.ui  sessionentry.cpp  sessionentry.h  (+1 more)
gui/: device.cpp  device.h  devicemanager.h  mainwindow.cpp  mainwindow.h
gui/device_wizard/: deviceconnect.cpp  deviceconnect.h  deviceconnectpage.cpp  deviceconnectpage.h  devicediscoverypage.cpp  devicediscoverypage.h  deviceselect.cpp  deviceselect.h  devicewizard.cpp  devicewizard.h
platform/linux/common/: DiscoveryAgent.cpp  DiscoveryAgent.h  metawearwrapper.cpp  metawearwrapper.h
platform/windows/common/: DiscoveryAgent.cpp  DiscoveryAgent.h  metawearwrapper.cpp  metawearwrapper.h
